public class App {
    public static void main(String[] args) throws Exception {
        
        SystemController s = new SystemController();

        
    }
}