import java.io.Serializable;

public class Karte implements Serializable{
    
   protected String karte_Name = "N/A";
   protected String karte_Seltenheit;
   protected String karte_Damage;
   protected String karte_HP;
   protected String karte_Agility;
   protected String karte_Element;
   protected String karte_Ability;
   protected String karte_ID;

}
