import java.util.Random;

public class Texts {

    Random r1 = new Random();
    int r2 = r1.nextInt(13);

    String loadingtex[] = {
            "System lädt",
            "System lädt.",
            "System lädt..",
            "System lädt...",
            "System lädt....",
            "Funktionen laden",
            "Funktionen laden.",
            "Funktionen laden..",
            "Funktionen laden...",
            "Funktionen laden....",
            "Methoden werden vorbereitet",
            "Methoden werden vorbereitet",
            "Anmelden - System lädt",
            "Anmelden - System lädt",
            "Anmelden - System lädt",
            "Save - System lädt",
            "Save - System lädt",
            "Save - System lädt",
            "Random Generator lädt",
            "Random Generator lädt",
            "Random Generator lädt",
            "Random Generator lädt",
            "Random Generator lädt",
            "Suchmaschine lädt",
            "Suchmaschine lädt",
            "Suchmaschine lädt",
            "Suchmaschine lädt",
            "Services laden",
            "Services laden",
            "Services laden",
            "Services laden",
            "Services laden",
            "Services laden",
            "Textbox lädt",
            "Textbox lädt",
            "Textbox lädt",
            "Textbox lädt",
            "Menü lädt",
            "Menü lädt",
            "Menü lädt",
            "Menü lädt",
            "Menü lädt[1]",
            "Menü lädt[1]",
            "Menü lädt[2]",
            "Menü lädt[2]",
            "Menü lädt[3]",
            "Menü lädt[3]",
            "Menü lädt[4]",
            "Menü lädt[4]",
            "Menü lädt[5]",
            "Menü lädt[5]",
            "Menü lädt[6]",
            "Menü lädt[6]",
            "Lädt",
            "Lädt",
            "Lädt",
            "Lädt",
            "Lädt",
            "Lädt",
            "",

    };

    String randomNames[] = {
            "Ter",
            "The",
            "Knight",
            "Shredder",
            "Zufälliger",
            "Lack",
            "Master",
            "Richtig",
            "Eins",
            "Name",
            "Element",
            "Null",
            "Keiner",
            "Echter",
            "Bester",
            "Ninja",
            "Zero",
            "Zufällig",
            "Destroyer",
            "_Laser",
            "Game",
            "Cube",
            "Core",
            "Neon",
            "Zahl",
            "Generic",
            "Funktion",
            "Code",
            "Winner",
            "Dust",
            "Nemesis",
            "Final Fantasy" + r2,
            "Terminator",
            "User",
            "Axe",
            "Lost",
            "High",
            "Java",
            "Geheim",
            "Ranger",
            "Raptor",
            "Akar",
            "Mars",
            "Rest",
            "Razor",
            "Zahl",
            "Yukin",
            "Bat",
            "Kämpfer",
            "Falle",
            "Rote",
            "Ista",
            "AusT",
            "InD_",
            "Rats",
            "Spike",
            "Klasse",
            "Abstrakte",
            "Fantasy",
            "Old School ",
            "Hero",
            "Lord",
            "Dark",
            "Void",
            "Reaper",
            "Invisible",
            "Monster",
            "Mana",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",
            "Zufälliger",

    };


    public String setTex(String[] a, int i){

        return a[i];
    }


}
