public class User {
    String name;
    int password;
    boolean angemeldet;
}






