@startuml
skinparam classAttributeIconSize 0

class App #DarkGray-Grey {
 s : SystemController

}

note left of App #MediumVioletRed\9932CC
 <b> Hier </b>beginnt
  das Programm 
end note


abstract ArraysList #DarkGray-Grey{
#search_Results : String[]
#rar : String[]
#elemente : String[]
#skills : String[]
#skills_Beschreibung : String[]
#rar_colors : Color[]
#elemente_colors : Color[]
#skills_colors : Color[]
#extra_Damage : String[][]
#extra_Agility : String[][]


 }
 
 class DataStore #DarkGray-Grey{
 ~name : String 
 ~password : int
 ~angemeldet : boolean
 ~ver : Boolean
 ~temp_KarteName : String
 ~temp_KarteSeltenheit : String
 ~temp_KarteDamage : String
 ~temp_KarteHP : String
 ~temp_KarteAgility : String
 ~temp_KarteElement : String
 ~temp_KarteID : String
 ~temp_KarteAbility : String    
 ~karten[] : Karte[9]
 +clearSavedTempCard() : void
}





class GUI #DarkGray-Grey {
 #frame : JFrame

 #box2 : JPanel
 #cardInfoMenu : JPanel      
 #cardsMenu : JPanel
 #infoPanel : JPanel
 #panel1 : JPanel
 #randomButton : JPanel
 #saveButton : JPanel
 #search_Box : JPanel
 #sync_Box : JPanel

 #cardInfoImage : JLabel
 #cardInfoText[] : JLabel[8]
 #infoI : JLabel
 #infoMes : JLabel
 #infoN : JLabel
 #iRandomButton : JLabel
 #iSaveButton : JLabel
 #infoText : JLabel
 #l : JLabel
 #l2 : JLabel
 #optionI[] : JLabel[6]
 #randomCard[] : JLabel[6]
 #sec_Image : JLabel
 #unboxingI : JLabel

 #backB : JButton
 #confirmButton : JButton
 #eRandomButton : JButton
 #eSaveButton: JButton
 #option[] : JButton[6]
 #searchB1 : JButton
 #searchB2 : JButton
 #showCardsButtons[] : JButton[10]
 #sync[] : JButton[3]
 #filterChanger : JButton
 #unboxingButton[] : JButton[4]

 #descriptionBox : JTextArea
 #infoD : JTextArea
 #sync_Text : JTextArea

 #texarea : JTextField

generateCard : boolean

 ~r : double
 ~v : double

 meineKarten_Filter : String

 texts : Texts
 dataStore : DataStore
 user : User

 +clearBox() : void

}


class Karte #DarkGray-Grey {
 #Karte_Name: String
 #Karte_Seltenheit: String
 #Karte_Damage: String
 #Karte_HP: String
 #Karte_Agility: String
 #Karte_Element: String
 #Karte_Ability: String
 #Karte_ID: String

}

class SystemController #DarkGray-Grey {
-r1 : Random

-loadingValues[] : boolean[9]
-trueDo : boolean

-cardIndex : Byte
-d : Byte

-loading_height : int
-loading_width : int
-passwordNumbers : int
-r2 : int
-rd2 : int
-warnWait : int

-passwordController : String


 +karten[] : Karte[9]

 +loading() : void
 +reset_texarea() : void
 +clearBox() : void
 +addToBox(i : int) : void
 +randomName() : String
 -anmelden() : void
 +generateObject(a : String[]) : String
 +generateNumber() : int
 -confirmName() : void
 +setRarityColor() : void
 +setElementColor : void
 +setAbilityColor : void
 +confirmCardName() : void
 +confirmCardRarity() : void
 +confirmCardDamage() : void
 +confirmCardHP() : void
 +confirmCardAgility() : void
 +confirmCardElement() : void
 +confirmCardAbility() : void
 +instanceCard() : void
 +checkCards() : void
 +createCard(i : int) : void
 +option1_1() : void
 +showCardInfo(card : int) : void
 +showcards() : void
 +karteBearbeiten() : void
 +showEditPanel : void
 +generateRandomCard() : void
 +showOptions(b : boolean, n : int) : void
 +viewMenu() : void
 +karte_Delete : void
 +delete_Request : void
 +saveCards() : void
 +saveData() : void
 +loadData() : void
 +noData() : void
 +deleteData() : void
 +abmelden() : void
 +actionPerformed(java.awt.event.ActionEvent e) : void
 +sync() : void
 +warn(a : int, n : String, d : String, dif : String, i : String) : void
}


class Texts #DarkGray-Grey {
+loadingTex: String[]
+randomNames: String[]
+setTex(a : String[], i : int) : String
}

class User #DarkGray-Grey {
 -name: String
 -password: int
 -angemeldet: boolean
}



SystemController "1" *-- "0..10" User
GUI "1" *-- "0..10" Texts
App "1" *-- "0..10" SystemController
SystemController "1" *-- "0..10" GUI
DataStore -- Karte
Karte o-- User
GUI "1" *-- "0..10" DataStore
SystemController "1" *-- "0..10" Karte
GUI "1" *-- "0..10" ArraysList



@enduml
